# ssz-metric-final

./: .coveragerc  .gitignore  ABSOLUTE_PERFECTION_ACHIEVED.md  ALL_OUTPUTS_VALIDATED.md  CHANGELOG.md  CODE_TEMPLATES_FOR_COMPLETION.md  COMPLETE_OUTPUT_ANALYSIS.md  COMPLETE_SCIENTIFIC_VALIDATION.py  COMPREHENSIVE_FINDINGS_ANALYSIS.md  COMPREHENSIVE_REVIEW_AND_IMPROVEMENTS.md  CONTRIBUTING.md  COVERAGE.md  DEEP_ANALYSIS_ALL_OUTPUTS.md  DEPLOYMENT_GUIDE.md  DETAILED_ACTION_PLAN.md  EXECUTION_ROADMAP.md  EXECUTION_STATUS.md  FAHRPLAENE_UEBERSICHT.md  FAHRPLAN_2_COMPLETE.md  FAHRPLAN_2_ERWEITERT.md  FAHRPLAN_3_PERFEKT.md  FAHRPLAN_5_STATUS.md  FAHRPLAN_6_COMPLETE.md  FINAL_EVALUATION_PERFECT_METRIC.md  FINAL_QUALITY_REPORT.md  GENERATED_OUTPUTS_INDEX.md  GITHUB_SETUP_INSTRUCTIONS.md  INSTALL.md  MASTER_ROADMAP_TO_PERFECTION.md  MIRROR_POINTS_RESOLUTION_ANALYSIS.md  OUTPUT_ANALYSIS_EXECUTIVE_SUMMARY.md  PERFECTION_PLAN_EXECUTIVE_SUMMARY.md  PERFECTION_ROADMAP_DETAILED.md  PHASE1_PROGRESS.md  PHASE_1_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.md  QUICK_VERIFICATION.md  README.md  (+28 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  tests.yml  validation.yml
data/: real_data_full.csv
docs/archive/: ABSOLUTE_PERFECTION_CHECKLIST.md  BREAKTHROUGH_ACHIEVED.md  BUG_ANALYSIS.md  COMPLETE_GAP_ANALYSIS.md  EXECUTIVE_SUMMARY_FINAL.md  FINAL_50_PHASE_PERFECTION_PLAN.md  FINAL_50_PHASE_ROADMAP.md  FINAL_ANALYSIS_COMPLETE.md  FINAL_GAP_SUMMARY.md  META_ANALYSIS_V2.md  METRIC_COMPLETENESS_CHECK.md  PERFECTION_ANALYSIS_COMPLETE.md  PERFECTION_CHECKLIST.md  PERFECT_METRIC_ACHIEVED.md  PROMPT_ALIGNMENT_STATUS.md  QUICKSTART_COMPLETION.md  REALITY_CHECK_ANALYSIS.md  ROADMAP_50_PHASES.md  ROADMAP_TO_PERFECT_METRIC.md  SCIENTIFIC_FOUNDATION_INTEGRATION.md  SCIENTIFIC_PERFECTION_ACHIEVED.md  SCIENTIFIC_REVIEW.md  SSZ_THEORY_ALIGNED_50_PHASES.md  VALIDATION_STATUS.md
docs/examples/: USAGE_EXAMPLE_COMPLETE.py
docs/progress/: FAHRPLAN_1_MINIMAL.md  PROGRESS_FAHRPLAN_1.md  PROGRESS_FAHRPLAN_2_TASKS_4_5.md  PROGRESS_REPORT.md  PROGRESS_TAG1_VORMITTAG.md
docs/sessions/: SESSION_COMPLETE_2025-10-31.md  SESSION_FINALE_COMPLETE.md  SESSION_PERFECTION_PROGRESS.md  SESSION_SUMMARY_PROMPTS_3_4.md  SESSION_SUMMARY_PROMPT_5_FINAL.md
notebooks/: 01_Quick_Start.md  02_Mercury_Validation.md  README.md
tests/: README_TESTS.md  conftest.py  quick_test_fahrplan_1_complete.py  quick_test_tasks_1_2.py  test_complete_metric.py  test_energy_conditions.py  test_geodesics.py  test_geodesics_minimal.py  test_intersection.py  test_isco.py  test_metric_core.py  test_observables_complete.py  test_perihelion.py  test_photon_sphere.py  test_ppn.py  test_qnm.py  test_scalar_action_theory.py  test_shadow_radius.py
validation/: black_hole_bomb.py  eso_validation.py
viz_ssz_metric/: __init__.py  christoffel_symbols.py  curvature_proxy.py  einstein_tensor.py  energy_conditions.py  energy_momentum_tensor.py  geodesics.py  geodesics_minimal.py  higher_order_pn.py  kretschmann_weyl.py  mass_corrections.py  natural_boundary.py  numerical_stability.py  phi_variation.py  ppn.py  raychaudhuri.py  requirements.txt  ricci_curvature.py  riemann_tensor.py  saturation.py  scalar_action_theory.py  segment_density.py  ssz_mirror_metric.py  ssz_theory_segmented.py  sszviz_cli.py  time_dilation_analysis.py  unified_metric.py
viz_ssz_metric/tests/: __init__.py  test_mirror_metric.py
