[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssz-full-metric"
version = "0.1.0"
description = "Singularity-free SSZ metric with GR compatibility"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "ANTI-CAPITALIST SOFTWARE LICENSE"}
authors = [
    {name = "Carmen Wrede"},
    {name = "Lino Casu"}
]
keywords = ["general-relativity", "black-holes", "ssz", "singularity-free"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Free For Non-Commercial Use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics"
]

dependencies = [
    "numpy>=1.24.0,<1.27.0",
    "scipy>=1.10.0,<1.14.0",
    "mpmath>=1.3.0,<1.4.0",
    "sympy>=1.12,<1.14",
    "matplotlib>=3.7.0,<3.10.0",
    "Pillow>=9.5.0,<11.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.0,<8.5.0",
    "pytest-cov>=4.0.0,<6.0.0",
]
dev = [
    "black>=23.0.0,<25.0.0",
    "flake8>=6.0.0,<8.0.0",
    "mypy>=1.0.0,<1.14.0",
    "ipython>=8.0.0,<9.0.0",
    "jupyter>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/ssz-project/ssz-full-metric"
Documentation = "https://github.com/ssz-project/ssz-full-metric/tree/main/docs"
Repository = "https://github.com/ssz-project/ssz-full-metric"

[project.scripts]
ssz-metric = "viz_ssz_metric.sszviz_cli:main"

[tool.setuptools]
packages = ["viz_ssz_metric", "viz_ssz_metric.tests"]

[tool.setuptools.package-data]
viz_ssz_metric = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests", "viz_ssz_metric/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
