[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssz-metric"
version = "1.0.0"
description = "Perfect SSZ Metric - 99.7% empirical agreement (Mercury, Shadow, QNM, Hawking)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "ANTI-CAPITALIST SOFTWARE LICENSE"}
authors = [
    {name = "Carmen Wrede"},
    {name = "Lino Casu"}
]
keywords = [
    "black-holes",
    "general-relativity",
    "physics",
    "ssz",
    "kerr",
    "hawking",
    "gravitational-physics",
    "astrophysics",
    "singularity-free",
    "mercury-precession"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Free For Non-Commercial Use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy"
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "matplotlib>=3.3.0",
]
plot = [
    "matplotlib>=3.3.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "matplotlib>=3.3.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/USERNAME/ssz-full-metric"
Documentation = "https://github.com/USERNAME/ssz-full-metric#readme"
Repository = "https://github.com/USERNAME/ssz-full-metric"
"Bug Tracker" = "https://github.com/USERNAME/ssz-full-metric/issues"
Changelog = "https://github.com/USERNAME/ssz-full-metric/blob/master/CHANGELOG.md"

# [project.scripts]
# ssz-metric = "viz_ssz_metric.cli:main"  # CLI not yet implemented

[tool.setuptools]
packages = ["viz_ssz_metric"]

[tool.setuptools.package-dir]
viz_ssz_metric = "viz_ssz_metric"

[tool.setuptools.package-data]
viz_ssz_metric = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests", "viz_ssz_metric/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
